# quill

./: .gitignore  README.md  __about__.py  build.gradle  build.gradle.kts  gradle.properties  install.bat  install.sh  pyproject.toml  quill.json  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml  release.yml
bootstrap/: build.gradle  build.gradle.kts
bootstrap/src/main/java/fluff/core/: FluffCore.java
bootstrap/src/main/java/quill/bootstrap/: PyQuill.java  QuillBootstrap.java
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: quill.about.gradle.kts  quill.java-conventions.gradle.kts  quill.publishing.gradle.kts  quill.subproject.gradle.kts
core/: build.gradle  build.gradle.kts
core/src/main/java/quill/: AbstractRepository.java  AbstractRepositoryManager.java  IPackage.java  IRepository.java  IRepositoryManager.java  QEnv.java  QFiles.java  QPackage.java  QRepository.java  Quill.java
core/src/main/java/quill/command/: Command.java  CommandSource.java  QCommand.java  (+3 more)
core/src/main/resources/bundle/: __main__.py  install.py  package.json  requirements.py  wizard.py
installer/: build.gradle
scripts/: files.py
scripts/run/: build.py  generate.py  gradlew.py
src/main/bundle/: q.py
src/main/bundle/base/: qrun.py  run.py
src/main/bundle/quill/: globals.py  package.py
src/main/bundle/quill/commands/: install.py  run.py
src/main/bundle/quill/tools/: run.py
src/main/bundle/quill/utils/: java.py  library.py
src/main/java/quill/: Quill.java
src/main/java/quill/core/: QException.java  QFiles.java  QVersion.java  QuillCore.java
(+110 files in other folders)
